# 168-neural-sde-trading

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  backtest.py  data_loader.py  latent_sde.py  neural_sde.py  requirements.txt  sde_solvers.py  train.py  visualize.py
rust_neural_sde/: Cargo.toml
rust_neural_sde/examples/: basic_sde.rs
rust_neural_sde/src/: lib.rs
